Google Maps properly implemented with dark mode, size is wrong and needs fixing

--- a/frontend/src/app/game-info/map/map.component.css
+++ b/frontend/src/app/game-info/map/map.component.css
@@ -6,5 +6,5 @@
 }
 #map {
   height: 100%;
-  width: 100%;
+  width: 80%;
 }
