--- a/frontend/src/app/game-info/pages/game-info.page.css
+++ b/frontend/src/app/game-info/pages/game-info.page.css
@@ -20,4 +20,5 @@
 #map {
   row-gap: 0;
   align-self: flex-end;
+  width: 100%;
 }
